--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -4,4 +4,4 @@ html(lang='ru')
     title Jade
   body
     h1 Jade - node template engine
-    include header.pug
+    include ../includes/header.pug
