--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -1,8 +1,8 @@
 // Font
-$mainFont                : 'Montserrat', Helvetica, Arial, sans-serif;
-
+$mainFont                : 'Gotham', Arial, sans-serif;
+$mySecontFont : 'Helvetica', Arial, sans-serif;
 // Size
-$mainFontColor           : #101010;
+$mainFontColor           :#4a4848;
 $mainFontSize            : 18px;
 $mainFontWeight          : 400;
 $mainLineHeight          : 1.4;
