--- a/src/pug/includes/header.pug
+++ b/src/pug/includes/header.pug
@@ -1,1 +1,15 @@
-h1 HI1
+.container-header
+    .container_upper-header
+        .container_left-header
+            .logo-header
+                img(src="../../assets/img/logo-header.png", alt="")
+            .text-header
+                h1 Поиск
+    .container_right-header
+        .telephone-header
+            p 8-800-555-35-35
+            span Справочная служба
+        .telephone_Exit-header
+            img(src="../../assets/img/Exit-header.svg", alt="")
+            
+    
