--- a/src/assets/scss/utils/fonts.scss
+++ b/src/assets/scss/utils/fonts.scss
@@ -1,2 +1,12 @@
 // Fonts here
 // see more: https://github.com/vedees/webpack-template/blob/master/README.md#import-js-files
+
+@font-face {
+    font-family: "Helvetica";
+    src: url('/assets/fonts/Helvetica_LT.otf');
+}
+
+@font-face {
+    font-family: "Gotham";
+    src: url('/assets/fonts/12108.ttf');
+}
