--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -19,7 +19,7 @@ $primary-color           : #444ce0;
 $success-color           : #26de81;
 $danger-color            : #fc5c65;
 $warning-color           : #fed330;
-$light-color             : #999999;
+$light-color             : rgba(#152324, 0.42);
 $purple-color            : #8854d0;
 
 // Neutral Color
