--- a/src/pug/includes/header.pug
+++ b/src/pug/includes/header.pug
@@ -1,15 +1,15 @@
-.container-header
-    .container_upper-header
-        .container_left-header
-            .logo-header
+.header.grid
+    .header__container
+        .header__container-left
+            .header__logo
                 img(src="../../assets/img/logo-header.png", alt="")
-            .text-header
+            .header__text
                 h1 Поиск
-    .container_right-header
-        .telephone-header
-            p 8-800-555-35-35
-            span Справочная служба
-        .telephone_Exit-header
-            img(src="../../assets/img/Exit-header.svg", alt="")
+        .header__container-right
+            .header__mobile
+                p 8-800-555-35-35
+                span Справочная служба
+            .header__exit-icon
+                img(src="../../assets/img/Exit-header.svg", alt="")
             
     
