--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,6 +1,7 @@
 doctype html
 html(lang='ru')
   head
+    link(rel='stylesheet', href='../assets/css/main.css') 
     title Jade
   body
     include ../includes/header.pug
