Сделал поисковую строку и сетку продуктов

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -89,4 +89,8 @@ section, .section {
 // Modules
 @import "modules/header.scss";
 
-@import "modules/control.scss"
+@import "modules/control.scss";
+
+@import "modules/finding.scss";
+
+@import "modules/finding-input.scss";
