--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,7 +1,9 @@
 doctype html
 html(lang='ru')
   head
-    title Jade
+    title FreshStore
   body
     include ../includes/header.pug
-    include ../includes/control.pug
+    .page1.grid
+      include ../includes/control.pug
+      include finding.pug
