--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -2,7 +2,7 @@
 $mainFont                : 'Gotham', Arial, sans-serif;
 $mySecontFont : 'Helvetica', Arial, sans-serif;
 // Size
-$mainFontColor           :#4a4848;
+
 $mainFontSize            : 18px;
 $mainFontWeight          : 400;
 $mainLineHeight          : 1.4;
@@ -14,6 +14,8 @@ $phoneWidth              : 480px;
 $smPhoneWidth            : 320px;
 
 // Main color
+$mainFontColor :#4a4848;
+$main-color              : #839946;
 $default-color           : #ffffff;
 $primary-color           : #444ce0;
 $success-color           : #26de81;
