--- a/src/pug/includes/control.pug
+++ b/src/pug/includes/control.pug
@@ -3,18 +3,24 @@
         .control__item
             span(onclick="show('Page1');") 
                 img(src="../../assets/img/control-loupe.svg", alt="")
+                .text Поиск
         .control__item
             span(onclick="show('Page2');")
                 img(src="../../assets/img/control-user.svg", alt="")
+                .text Профиль
         .control__item
             span(onclick="show('Page3');")
                 img(src="../../assets/img/control-heart.svg", alt="")
+                .text Любимые товары
         .control__item
             span(onclick="show('Page4');")
                 img(src="../../assets/img/control-cart.svg", alt="")
+                .text Корзина
         .control__item
             span(onclick="show('Page5');")
                 img(src="../../assets/img/control-payout.svg", alt="")
+                .text История покупок
         .control__item
             span(onclick="show('Page6');")
                 img(src="../../assets/img/control-question.svg", alt="")
+                .text Вопрос/ответ
