--- a/src/pug/pages/finding.pug
+++ b/src/pug/pages/finding.pug
@@ -3,86 +3,8 @@
     .finding-grid
         .finding-grid__box
             .finding-grid__image
-                img(src="../../assets/img/finding-fructs.svg", alt="")
+                img(class="icons",src="../../assets/img/finding-fructs.svg", alt="")
             .finding-grid__text
                 p Овощи, фрукты
-        .finding-grid__box
-            .finding-grid__image
-                img(src="../../assets/img/finding-fructs.svg", alt="")
-            .finding-grid__text
-                p Овощи, фрукты
-        .finding-grid__box
-            .finding-grid__image
-                img(src="../../assets/img/finding-fructs.svg", alt="")
-            .finding-grid__text
-                p Овощи, фрукты
-        .finding-grid__box
-            .finding-grid__image
-                img(src="../../assets/img/finding-fructs.svg", alt="")
-            .finding-grid__text
-                p Овощи, фрукты
-        .finding-grid__box
-            .finding-grid__image
-                img(src="../../assets/img/finding-fructs.svg", alt="")
-            .finding-grid__text
-                p Овощи, фрукты
-        .finding-grid__box
-            .finding-grid__image
-                img(src="../../assets/img/finding-fructs.svg", alt="")
-            .finding-grid__text
-                p Овощи, фрукты
-        .finding-grid__box
-            .finding-grid__image
-                img(src="../../assets/img/finding-fructs.svg", alt="")
-            .finding-grid__text
-                p Овощи, фрукты
-        .finding-grid__box
-            .finding-grid__image
-                img(src="../../assets/img/finding-fructs.svg", alt="")
-            .finding-grid__text
-                p Овощи, фрукты
-        .finding-grid__box
-            .finding-grid__image
-                img(src="../../assets/img/finding-fructs.svg", alt="")
-            .finding-grid__text
-                p Овощи, фрукты
-        .finding-grid__box
-            .finding-grid__image
-                img(src="../../assets/img/finding-fructs.svg", alt="")
-            .finding-grid__text
-                p Овощи, фрукты
-        .finding-grid__box
-            .finding-grid__image
-                img(src="../../assets/img/finding-fructs.svg", alt="")
-            .finding-grid__text
-                p Овощи, фрукты
-        .finding-grid__box
-            .finding-grid__image
-                img(src="../../assets/img/finding-fructs.svg", alt="")
-            .finding-grid__text
-                p Овощи, фрукты
-        .finding-grid__box
-            .finding-grid__image
-                img(src="../../assets/img/finding-fructs.svg", alt="")
-            .finding-grid__text
-                p Овощи, фрукты
-        .finding-grid__box
-            .finding-grid__image
-                img(src="../../assets/img/finding-fructs.svg", alt="")
-            .finding-grid__text
-                p Овощи, фрукты
-        .finding-grid__box
-            .finding-grid__image
-                img(src="../../assets/img/finding-fructs.svg", alt="")
-            .finding-grid__text
-                p Овощи, фрукты
-        .finding-grid__box
-            .finding-grid__image
-                img(src="../../assets/img/finding-fructs.svg", alt="")
-            .finding-grid__text
-                p Овощи, фрукты
-        .finding-grid__box
-            .finding-grid__image
-                img(src="../../assets/img/finding-fructs.svg", alt="")
-            .finding-grid__text
-                p Овощи, фрукты
+.tab-content__outer
+            
