--- a/src/assets/scss/modules/footer.scss
+++ b/src/assets/scss/modules/footer.scss
@@ -1,1 +1,18 @@
 // footer style
+footer {
+    background-color: #ebe5e6;
+}
+.footer {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-family: $mySecontFont;
+    margin-top: 50px;
+    margin: 50px auto 0 auto;
+    width: 60%;
+    a {
+        color: #66921b;
+        cursor: pointer;
+        text-decoration: underline;
+    }
+}
