--- a/src/pug/pages/finding.pug
+++ b/src/pug/pages/finding.pug
@@ -7,4 +7,4 @@
             .finding-grid__text
                 p Овощи, фрукты
 .tab-content__outer
-            
+    .tabs-nav.tabs-nav            
