--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -7,4 +7,7 @@ html(lang='ru')
     .page1.grid
       include ../includes/control.pug
       include finding.pug
+    .tabs_box
+      .line
+    include ../includes/footer.pug
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js")
